# gemini-proxy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_STRATEGY.md  IMPLEMENTATION_PLAN.md  README.md  REFACTOR_PLAN.md  RELEASE.md  TESTING_STRATEGY.md  proxy.py  pyproject.toml  requirements.txt  simple_proxy.py  smoke_test.py  smoke_test_real.py
.github/workflows/: release.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
examples/: simple_proxy.py  smoke_test.py  smoke_test_real.py
src/gemini_proxy/: config.py  main.py  models.py
src/gemini_proxy/routes/: chat.py  health.py  models.py
src/gemini_proxy/services/: gemini_service.py  logging_service.py
src/gemini_proxy/utils/: cleaning.py  response_utils.py  validation.py
tests/: test_core.py  test_proxy.py
